index.html was modified

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Git and GitHub Project</title>
+        <link type="text/css" rel="stylesheet" href="main.css">
     </head>
     <body>
         <h1>Git and GitHub Project</h1>
