Changes made to index.html and main.css

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Git and GitHub Project</h1>
+
+        <p>This is a project I completed to practice using Git and GitHub.</p>
     </body>
 </html>
