index.html and main.css were updated

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     </head>
     <body>
         <h1>Git and GitHub Project</h1>
+        <p>
+            This is a project I worked on inorder to get practice using Git and GitHub.
+        </p>
 
-        <p>This is a project I completed to practice using Git and GitHub.</p>
+        <h2>What is Git?</h2>
+        <p>
+            Git is a version control system. It allows you to do many things. One of the major things it does is track changes you make to files.
+        </p>
     </body>
 </html>
